# pdf-clr-dpi-converter

./: Readme.md  pyproject.toml
src/: pymuPdf-sample.py
